# qmk_hid

./: .gitignore  Cargo.toml  README.md  flake.nix  framework_copilot_default_v0.3.1.uf2  qmk_gui.py  requirements.txt  setup.cfg  uf2conv.py
.github/workflows/: ci-gui.yml  ci-nix.yml  ci.yml  python-ci.yaml  qmk_gui.yml
factory/: README.md  check_detected.bat  check_detected.sh  test_rgb.bat  test_rgb.sh
python/: README.md  pyproject.toml  requirements.txt
python/qmk_gui/: __init__.py
python/qmk_hid/: firmware_update.py  gui.py  protocol.py  uf2conv.py
src/: factory.rs  keycodes.rs  lamparray.rs  lib.rs  main.rs  raw_hid.rs  via.rs
