[package]
name = "qmk_hid"
version = "0.1.3"
edition = "2021"
description = "Commandline tool to interact with QMK devices via their raw HID interface"
authors = ["Daniel Schaefer <dhs@frame.work>"]
keywords = ["hid", "qmk", "keyboard"]
repository = "https://github.com/FrameworkComputer/qmk_hid"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hidapi = "2.2"
