[package]
name = "qmk_hid"
version = "0.1.12"
edition = "2021"
license = "BSD-3-Clause"
description = "Commandline tool to interact with QMK devices via their raw HID interface"
authors = ["Daniel Schaefer <dhs@frame.work>"]
keywords = ["hid", "qmk", "keyboard"]
repository = "https://github.com/FrameworkComputer/qmk_hid"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hidapi = "2.6"

[build-dependencies]
static_vcruntime = "2.0"
