[metadata]
name = qmk_gui
version = 0.1.8
author = Framework Computer Inc
author_email = dhs@frame.work
url = https://github.com/FrameworkComputer/qmk_hid
description = Simple GUI tool to interact with QMK keyboards
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    hidapi==0.14.0
    PySimpleGUI==4.60.5
    pywin32 ; sys_platform == "win32"
package_dir=
    =python

[options.entry_points]
#console_scripts = 
gui_scripts =
    qmk_gui = qmk_gui:main

[options.packages.find]
where=python
