[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "qmk_hid"
# TODO: Dynamic version from git (requires tags)
#dynamic = ["version"]
dynamic = ["dependencies"]
version = "0.1.8"
description = 'A GUI tool to control QMK keyboard, specifically of the Framework Laptop 16'
# TODO: Custom README for python project
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = [
  "hatch",
]
authors = [
  { name = "Daniel Schaefer", email = "dhs@frame.work" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Issues = "https://github.com/FrameworkComputer/qmk_hid/issues"
Source = "https://github.com/FrameworkComputer/qmk_hid"

# TODO: Figure out how to add a runnable-script
#[project.scripts]
#qmk_hid = "qmk_hid.gui:main_cli"

[project.gui-scripts]
qmk_gui = "qmk_hid.gui:main"

#[tool.hatch.version]
#source = "vcs"
#
#[tool.hatch.build.hooks.vcs]
#version-file = "qmk_hid/_version.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

# TODO: Maybe typing with mypy
# [tool.hatch.build.targets.wheel.hooks.mypyc]
# enable-by-default = false
# dependencies = ["hatch-mypyc>=0.14.1"]
# require-runtime-dependencies = true
# mypy-args = [
#   "--no-warn-unused-ignores",
# ]
# 
# [tool.mypy]
# disallow_untyped_defs = false
# follow_imports = "normal"
# ignore_missing_imports = true
# pretty = true
# show_column_numbers = true
# warn_no_return = false
# warn_unused_ignores = true